--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,6 +30,8 @@ services:
     ports:
       - target: 6379
         published: 6379
+    volumes:
+      - ./_DATA/redis:/data
     networks:
       - notion-press
 
