--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   mono:
-    container_name: notion-press-mono
+    container_name: normative-mono
     build:
       context: .
       dockerfile: Dockerfile
@@ -19,10 +19,10 @@ services:
     volumes:
       - ./:/app
     networks:
-      - notion-press
+      - normative
 
   redis:
-    container_name: notion-press-redis
+    container_name: normative-redis
     image: redis
     restart: unless-stopped
     environment:
@@ -33,9 +33,9 @@ services:
     volumes:
       - ./_DATA/redis:/data
     networks:
-      - notion-press
+      - normative
 
 networks:
-  notion-press:
-    name: notion-press
+  normative:
+    name: normative
     driver: bridge
