--- a/apps/producer/package.json
+++ b/apps/producer/package.json
@@ -17,14 +17,18 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^22.7.6",
+    "kysely-codegen": "^0.17.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
+    "@types/pg": "^8.11.10",
     "bullmq": "^5.21.1",
     "concurrently": "^8.2.2",
     "ioredis": "^5.4.1",
-    "nodemon": "^3.1.0"
+    "kysely": "^0.27.4",
+    "nodemon": "^3.1.0",
+    "pg": "^8.13.1"
   }
 }
