--- a/apps/producer/package.json
+++ b/apps/producer/package.json
@@ -10,7 +10,8 @@
     "build:watch": "tsc --watch --preserveWatchOutput",
     "dev": "NODE_OPTIONS='--dns-result-order=ipv4first' concurrently npm:build:watch pnpm:start:watch",
     "prod": "npm run build && npm run start",
-    "test": "mocha"
+    "test": "mocha",
+    "generate-type": "kysely-codegen --out-file ./src/db/types.mts"
   },
   "keywords": [],
   "author": "",
