--- a/apps/producer/package.json
+++ b/apps/producer/package.json
@@ -24,9 +24,12 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
+    "@types/express": "^5.0.0",
     "@types/pg": "^8.11.10",
     "bullmq": "^5.21.1",
     "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
+    "express": "^4.21.1",
     "ioredis": "^5.4.1",
     "kysely": "^0.27.4",
     "nodemon": "^3.1.0",
