--- a/apps/producer/package.json
+++ b/apps/producer/package.json
@@ -23,6 +23,8 @@
     "typescript": "^5.4.3"
   },
   "dependencies": {
+    "@bull-board/api": "^6.3.3",
+    "@bull-board/express": "^6.3.3",
     "@notionhq/client": "^2.2.15",
     "@types/express": "^5.0.0",
     "@types/pg": "^8.11.10",
